src/test/ui/or-patterns/exhaustiveness-non-exhaustive.stderr
error[E0004]: non-exhaustive patterns: `(2u8..=std::u8::MAX, _)` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:6:11
   |
LL |     match (0u8, 0u8) {
   |           ^^^^^^^^^^ pattern `(2u8..=std::u8::MAX, _)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `((4u8..=std::u8::MAX))` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:10:11
   |
LL |     match ((0u8,),) {
   |           ^^^^^^^^^ pattern `((4u8..=std::u8::MAX))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `(Some(2u8..=std::u8::MAX))` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:14:11
   |
LL |     match (Some(0u8),) {
   |           ^^^^^^^^^^^^ pattern `(Some(2u8..=std::u8::MAX))` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0004`.
